# crosscov-shrinkage

./: README.md  pyproject.toml
src/crosscov/: __init__.py  covariance.py  shrinkage.py
